[project]
name = "disaster-openenv"
version = "0.1.0"
description = "Disaster Response OpenEnv Environment"
authors = [{name = "Ashish"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "numpy",
    "pygame",
    "openenv"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"